--- a/personal-portfolio/src/components/About.scss
+++ b/personal-portfolio/src/components/About.scss
@@ -2,7 +2,7 @@
 
 .About--Page {
   width: 100vw;
-  height: 1200px;
+  height: 101vh;
   overflow: hidden;
   display: block;
   // margin-bottom: 1em;
@@ -565,7 +565,7 @@
   
     p {
       color: white;
-      font-size: 24px !important;
+      font-size: 30px !important;
     }
 
     a {
