adding particles effect to home component

--- a/personal-portfolio/src/components/Particles.scss
+++ b/personal-portfolio/src/components/Particles.scss
@@ -1,4 +1,9 @@
-.Particles {
+#Particles {
   position: absolute;
   pointer-events: none;
+  z-index: -1;
+  width: 100vw;
+  height: 100vh;
+  // margin-top: 0 !important
+
 }
