--- a/personal-portfolio/src/components/Particles.scss
+++ b/personal-portfolio/src/components/Particles.scss
@@ -1,6 +1,6 @@
 #Particles {
   position: absolute;
-  pointer-events: none;
+  // pointer-events: none;
   z-index: -1;
   width: 100vw;
   height: 100vh;
