--- a/personal-portfolio/src/components/Footer.scss
+++ b/personal-portfolio/src/components/Footer.scss
@@ -4,4 +4,14 @@
   background-color: black;
   position: absolute;
   z-index: 12;
+  display: flex;
+  justify-content: center
 }
+
+.Social--Media--Link {
+  color: #eee;
+  margin-right: 10px;
+  margin-top: 10px;
+  text-decoration: none;
+}
+
