minor styling changes

--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -34,6 +34,13 @@
   }
 }
 
+#Card--Text {
+  // display: flex;
+  // align-items: center
+  margin-top: 2em;
+  
+}
+
 
 
 
@@ -71,13 +78,10 @@
   border-color: #08FDD8;
   padding: 8px 12px;
   border-radius: 4px;
-  color: #08FDD8;
-  background-color: #424242;
+  color: black;
+  background-color: #08FDD8;
   font-size: 16px;
-
   &:hover {
-    color: black;
-    background-color: #08FDD8;
     cursor: pointer;
   }
 
