removing scrollbar display and overflow-y axis

--- a/personal-portfolio/src/App.css
+++ b/personal-portfolio/src/App.css
@@ -9,4 +9,9 @@ body {
   display: flex;
   font-family: 'Raleway', sans-serif;
   height: 100%;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
