styling background color

--- a/personal-portfolio/src/components/Projects.scss
+++ b/personal-portfolio/src/components/Projects.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  background-color: #eee;
+  background-color: #EEE;
   padding-bottom: 5em
 }
 
