--- a/personal-portfolio/src/components/ProjectItems.scss
+++ b/personal-portfolio/src/components/ProjectItems.scss
@@ -162,6 +162,11 @@
   text-align: center;
 }
 
+.control-arrow {
+  opacity: .6;
+  background-color: #212121 !important;
+}
+
 .Tech--Stack {
 
 }
