--- a/personal-portfolio/src/components/About.scss
+++ b/personal-portfolio/src/components/About.scss
@@ -48,6 +48,8 @@
     and (min-device-width: 375px) 
     and (max-device-width: 812px) 
     and (-webkit-min-device-pixel-ratio: 3) { 
+      padding-bottom: 0;
+      margin-bottom: 0;
   }
 }
 
@@ -131,13 +133,13 @@
   border-radius: 4px;
   display: block;
   position: absolute;
+  padding-top: 4em;
   z-index: 5;
   pointer-events: none;
 
 }
 
 .Left--Main {
-  height: 100vh;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -175,6 +177,7 @@
     margin: auto;
     display: flex;
     flex-direction: column;
+
   }
 
   /* ----------- iPhone X ----------- */
@@ -473,9 +476,11 @@
   }
 }
 
-// .Right--Container {
+#Right--Container {
+  // max-width: 100vw !important;
+  // max-height: 100vh !important;
   
-// }
+}
 
 .Bio {
   color: white;
